@@ -6,6 +6,7 @@ Date: 29/6/25
   Bugfixes:
     - Fixed that hex core deletion was possible pre-unlock.
     - Fixed that the last free claim you have wasn't free.
+    - Fixed that the catalog item selected wasn't being remembered after closing the catalog.
   Changes:
     - Moved circuit connection point of hex cores.
 ---------------------------------------------------------------------------------------------------
